x86 ABI for Android

--- a/sqlite/CMakeLists.txt
+++ b/sqlite/CMakeLists.txt
@@ -40,8 +40,13 @@ if(BEAM_USE_STATIC)
 	target_link_libraries(sqlite ${STATIC_OPENSSL})
 else()
 	if(ANDROID)
-		include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/include)
-		target_link_libraries(sqlite $ENV{OPENSSL_ROOT_DIR_ANDROID}/lib/libcrypto.a)
+	    if(ANDROID_ABI STREQUAL "armeabi-v7a")
+			include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/armv7-shared/include)
+			target_link_libraries(sqlite $ENV{OPENSSL_ROOT_DIR_ANDROID}/armv7-shared/lib/libcrypto.a)
+	    elseif(ANDROID_ABI STREQUAL "x86")
+			include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/x86-shared/include)
+			target_link_libraries(sqlite $ENV{OPENSSL_ROOT_DIR_ANDROID}/x86-shared/lib/libcrypto.a)
+	    endif()
 	else()
 	find_package(OpenSSL REQUIRED)
 
