--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,9 @@ if(UNIX OR WIN32)
 endif()
 
 if(ANDROID)
-    include_directories($ENV{BOOST_ROOT_ANDROID}/include/boost-1_68)
+	message("ANDROID_ABI: ${ANDROID_ABI}")
+	add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
+    include_directories($ENV{BOOST_ROOT_ANDROID}/${ANDROID_ABI}/include/boost-1_68)
 else()
     if(BEAM_USE_STATIC)
 	include(FindBoost)
