--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_JAVA_COMPILE_FLAGS "-source" "1.8" "-target" "1.8")
 set(CMAKE_JAVA_JAR_ENTRY_POINT WalletJNI)
 
 add_jar(WalletJNI 
-    SOURCES WalletJNI.java
+    SOURCES WalletJNI.java com/senlainc/beamwallet/core/Api.java
     ENTRY_POINT WalletJNI
 )
 
