jni: Api returns Wallet object

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -27,6 +27,7 @@ else()
 			com/mw/beam/beamwallet/core/Api.java
 			com/mw/beam/beamwallet/core/Utxo.java
 			com/mw/beam/beamwallet/core/SystemState.java
+            com/mw/beam/beamwallet/core/Wallet.java
 		ENTRY_POINT WalletJNI
 	)
 
