--- a/.travis.yml
+++ b/.travis.yml
@@ -1,114 +1,17 @@
-language: cpp
+language: android
+sudo: true
+android:
+  components:
+    - tools
+    - platform-tools
 
-git:
-  depth: false
+install:
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "cmake;3.6.4111459"
+  - echo y | sdkmanager "lldb;3.1"
 
-matrix:
-  include:
-    - os: osx
-      osx_image: xcode9.3
-      before_install: 
-        - export TZ=Etc/GMT-3
-        - brew unlink cmake
-        - brew unlink boost 
-        - brew install qt5 cmake boost
-        - brew link qt5 --force
-        - export PATH=/usr/local/opt/qt/bin:$PATH
-        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Darwin.dmg"
-        - export OPENSSL_ROOT_DIR="/usr/local/opt/openssl"
-      env: 
-        - BUILD_TYPE=Debug
-        - OS_FOLDER=mac
-      script:
-        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
-        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.dmg"
-
-    - os: osx
-      osx_image: xcode9.3
-      before_install:
-        - export TZ=Etc/GMT-3
-        - brew unlink cmake
-        - brew unlink boost 
-        - brew install cmake boost
-        - sudo git clone --depth=1 https://github.com/nesbox/qt5-static-mac.git /usr/local/qt5-static
-        - export PATH=~/qt5-static/bin:$PATH
-        - export OPENSSL_ROOT_DIR="/usr/local/opt/openssl"
-        - export QT5_ROOT_DIR="/usr/local/qt5-static"
-        - export QML_IMPORT_PATH="/usr/local/qt5-static/qml"
-        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Darwin.dmg"
-      env: 
-        - BUILD_TYPE=Release
-        - OS_FOLDER=mac
-      script:
-        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
-        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.dmg"
-
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-            - libboost-all-dev
-            - libssl-dev
-            - curl
-      before_install:
-        - export TZ=Etc/GMT-3
-        - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
-        - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
-        - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
-        - sudo apt-get update
-        - sudo apt-get install qt510declarative qt510svg libgl1-mesa-dev-lts-xenial
-        - eval "CC=gcc-7 && CXX=g++-7"
-        - export PATH=/opt/qt510/bin:$PATH
-        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Linux.deb"
-      env: 
-        - BUILD_TYPE=Debug
-        - OS_FOLDER=linux
-      script:
-        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
-        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.deb"
-
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-            - libboost-all-dev
-            - libssl-dev
-            - curl
-      before_install:
-        - export TZ=Etc/GMT-3
-        - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
-        - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
-        - eval "CC=gcc-7 && CXX=g++-7"
-        - git clone --depth=1 https://github.com/nesbox/qt5-static-linux.git /home/travis/qt5-static
-        - export QT5_ROOT_DIR="/home/travis/qt5-static"
-        - export QML_IMPORT_PATH="/home/travis/qt5-static/qml"
-        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Linux.deb"
-      env: 
-        - BUILD_TYPE=Release
-        - OS_FOLDER=linux
-      script:
-        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static  -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
-        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.deb"
-
-# TODO: version detection should be in one place
 before_script:
-  - BEAM_VERSION="1.0.$(git rev-list HEAD --count)"
+  - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
 
-after_success:
-  # deploy using ftp server
-  - BUILDS_SERVER_PATH=${BUILD_SERVER}/files/$TRAVIS_BRANCH/$(date +%Y.%m.%d)/$BUILD_TYPE/$OS_FOLDER
-  - tar -cvzf beam-node-$BEAM_VERSION.tar.gz --directory=$HOME/build/beam-mw/beam/beam beam-node beam-node.cfg
-  - tar -cvzf beam-wallet-cli-$BEAM_VERSION.tar.gz --directory=$HOME/build/beam-mw/beam/wallet beam-wallet beam-wallet.cfg
-  - curl --retry 3 --ftp-create-dirs -T beam-node-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
-  - curl --retry 3 --ftp-create-dirs -T beam-wallet-cli-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
-  - curl --retry 3 --ftp-create-dirs -T "$HOME/build/beam-mw/beam/$BEAM_WALLET_UI_IN" "$BUILDS_SERVER_PATH/$BEAM_WALLET_UI_OUT"
-
-notifications:
-  email:
-    - big.romanov@gmail.com
+script:
+  cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=x86 .
