android: setup travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ android:
   components:
     - tools
     - platform-tools
-
+    - extra-google-m2repository
+    - extra-android-m2repository
+    
 install:
   - echo y | sdkmanager "ndk-bundle"
   - echo y | sdkmanager "cmake;3.6.4111459"
