--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: android
 sudo: true
+
 android:
   components:
     - tools
     - platform-tools
-    - extra-google-m2repository
-    - extra-android-m2repository
-    
+
 install:
   - echo y | sdkmanager "ndk-bundle"
-  - echo y | sdkmanager "cmake;3.6.4111459"
-  - echo y | sdkmanager "lldb;3.1"
+
+before_install:
+  - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
+  - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
 
 before_script:
   - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
+  - export PATH=$ANDROID_NDK_HOME:$PATH
 
 script:
   cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=x86 .
