android: setup travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,13 @@ install:
 before_install:
   - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
   - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
+  - sudo git clone --depth=1 https://github.com/nesbox/boost_1_68-android.git /usr/local/boost_1_68-android
+  - sudo git clone --depth=1 https://github.com/nesbox/Prebuilt-OpenSSL-Android.git /usr/local/Prebuilt-OpenSSL-Android
 
 before_script:
   - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
+  - export BOOST_ROOT_ANDROID=/usr/local/boost_1_68-android
+  - export OPENSSL_ROOT_DIR_ANDROID=/usr/local/Prebuilt-OpenSSL-Android
   - export PATH=$ANDROID_NDK_HOME:$PATH
 
 script:
