--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ android:
     - platform-tools
 
 install:
-  - yes | sdkmanager "ndk-bundle" --licenses
+  - echo y | sdkmanager "ndk-bundle"
 
 before_install:
   - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
