--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,18 @@ sudo: true
 
 matrix:
   include:
-    - env: ANDROID_ABI=x86
-    - env: ANDROID_ABI=armeabi-v7a
+    - env:
+      - ANDROID_ABI=x86
+      - BUILD_TYPE=Release
+    - env: 
+      - ANDROID_ABI=armeabi-v7a
+      - BUILD_TYPE=Release
+    # - env:
+    #   - ANDROID_ABI=x86
+    #   - BUILD_TYPE=Debug
+    # - env: 
+    #   - ANDROID_ABI=armeabi-v7a
+    #   - BUILD_TYPE=Debug
 
 android:
   components:
@@ -25,7 +35,13 @@ before_script:
   - export BOOST_ROOT_ANDROID=/usr/local/boost_1_68-android
   - export OPENSSL_ROOT_DIR_ANDROID=/usr/local/Prebuilt-OpenSSL-Android/Prebuilt
   - export PATH=$ANDROID_NDK_HOME:$PATH
+  - BEAM_VERSION="1.0.$(git rev-list HEAD --count)"
 
 script:
-  - cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ANDROID_ABI .
+  - cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ANDROID_ABI -DCMAKE_BUILD_TYPE=$BUILD_TYPE .
   - make wallet-jni -j4
+
+after_success:
+  - BUILDS_SERVER_PATH=${BUILD_SERVER}/files/$TRAVIS_BRANCH/$(date +%Y.%m.%d)/$BUILD_TYPE/$ANDROID_ABI
+  - tar -cvzf wallet-jni-$BEAM_VERSION.tar.gz --directory=$HOME/build/beam-mw/beam/android wallet-jni.so
+  - curl --retry 3 --ftp-create-dirs -T wallet-jni-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
