--- a/android-application/app/src/main/AndroidManifest.xml
+++ b/android-application/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".main.MainActivity"
+            android:name=".wallet.WalletActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".utxo.UtxoActivity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
