--- a/pow/CMakeLists.txt
+++ b/pow/CMakeLists.txt
@@ -6,9 +6,22 @@ if(BEAM_POW_TYPE MATCHES "GPU")
 endif()
 
 if(BEAM_USE_GPU)
+
+    find_package(CUDA)
+
+    include_directories(${CUDA_INCLUDE_DIRS})
+
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};--disable-warnings;--ptxas-options=-v;-use_fast_math;-lineinfo)
+
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};; -gencode arch=compute_30,code=sm_30; -gencode arch=compute_35,code=sm_35; -gencode arch=compute_50,code=sm_50; -gencode arch=compute_52,code=sm_52; -gencode arch=compute_61,code=sm_61)
+
     set(POW_SRC
         equihash.cpp
-        impl/equihash_gpu.cpp)
+        impl/equihash_gpu.cu)
+
+    CUDA_ADD_LIBRARY(pow STATIC ${POW_SRC})
+
+    target_compile_definitions(pow PRIVATE BEAM_USE_GPU)
 else()
 
     include_directories(impl)
@@ -25,17 +38,13 @@ else()
         set_source_files_properties(impl/crypto/equihash_impl.cpp PROPERTIES COMPILE_FLAGS -O2)
     endif()
 
-endif()
+    add_library(pow STATIC ${POW_SRC})
 
-add_library(pow STATIC ${POW_SRC})
-add_dependencies(pow crypto)
-target_link_libraries(pow crypto)
-
-if(BEAM_USE_GPU)
-    target_compile_definitions(pow PRIVATE BEAM_USE_GPU)
-else()
     target_compile_definitions(pow PRIVATE ENABLE_MINING)
 endif()
+
+add_dependencies(pow crypto)
+target_link_libraries(pow crypto)
 
 target_include_directories(pow PRIVATE ${PROJECT_SOURCE_DIR}/utility/crypto)
 
