--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ endfunction()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(BEAM_USE_GPU TRUE)
+set(BEAM_USE_GPU FALSE)
 if(BEAM_POW_TYPE MATCHES "GPU")
     set(BEAM_USE_GPU TRUE)
 endif()
