--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,8 @@ before_install:
   - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
   - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
   - eval "CC=gcc-7 && CXX=g++-7"
-env: 
-  - BUILD_TYPE=Release
-  - OS_FOLDER=linux
+env: BUILD_TYPE=Release OS_FOLDER=linux
+
 script:
   - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static -DBRANCH_NAME=$TRAVIS_BRANCH -DBEAM_NO_QT_UI_WALLET=On -DBEAM_USE_GPU=On . && make beam-node -j4;
 
