--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ git:
 
 addons:
   apt:
-    sources:
+    sources: &apt_sources
       - ubuntu-toolchain-r-test
-    packages:
+    packages: &apt_packages
+      - nvidia-cuda-toolkit
       - g++-7
       - libboost-all-dev
       - libssl-dev
       - curl
-      - nvidia-cuda-toolkit
 before_install:
   - export TZ=Etc/GMT-3
   - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
