--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,16 @@ git:
 
 addons:
   apt:
-    sources: &apt_sources
+    sources:
       - ubuntu-toolchain-r-test
-    packages: &apt_packages
-      - nvidia-cuda-toolkit
+    packages:
       - g++-7
       - libboost-all-dev
       - libssl-dev
       - curl
+      - nvidia-cuda-toolkit
+      - nvidia-cuda-dev
+      - nvidia-profiler
 before_install:
   - export TZ=Etc/GMT-3
   - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
