--- a/pow/CMakeLists.txt
+++ b/pow/CMakeLists.txt
@@ -22,7 +22,7 @@ if(BEAM_USE_GPU)
 
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; --disable-warnings; --ptxas-options=-v; -use_fast_math; -lineinfo)
 
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -gencode arch=compute_30,code=sm_30; -gencode arch=compute_35,code=sm_35;)
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};; -gencode arch=compute_30,code=sm_30; -gencode arch=compute_35,code=sm_35; -gencode arch=compute_50,code=sm_50; -gencode arch=compute_52,code=sm_52; -gencode arch=compute_61,code=sm_61)
 
     set(POW_SRC ${POW_SRC}
         equihash.cpp
