--- a/.travis.yml
+++ b/.travis.yml
@@ -3,29 +3,104 @@ language: cpp
 git:
   depth: false
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
-      - libboost-all-dev
-      - libssl-dev
-      - curl
-before_install:
-  - export TZ=Etc/GMT-3
-  - eval "CC=gcc-7 && CXX=g++-7"
-  - wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh -q
-  - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
-  - wget -O cuda-repo-ubuntu1404-10-0-local-10.0.130-410.48_1.0-1_amd64.deb https://developer.nvidia.com/compute/cuda/10.0/Prod/local_installers/cuda-repo-ubuntu1404-10-0-local-10.0.130-410.48_1.0-1_amd64 -q
-  - sudo dpkg -i cuda-repo-ubuntu1404-10-0-local-10.0.130-410.48_1.0-1_amd64.deb
-  - sudo apt-key add /var/cuda-repo-10-0-local-10.0.130-410.48/7fa2af80.pub  
-  - sudo apt-get update
-  - sudo apt-get install cuda
-env: BUILD_TYPE=Release OS_FOLDER=linux
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode9.3
+      before_install: 
+        - export TZ=Etc/GMT-3
+        - brew unlink cmake
+        - brew unlink boost 
+        - brew install qt5 cmake boost
+        - brew link qt5 --force
+        - export PATH=/usr/local/opt/qt/bin:$PATH
+        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Darwin.dmg"
+        - export OPENSSL_ROOT_DIR="/usr/local/opt/openssl"
+        - export BEAM_WALLET_UI_OUT_VERLESS="Beam-Wallet.dmg"
+      env: 
+        - BUILD_TYPE=Debug
+        - OS_FOLDER=mac
+      script:
+        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
+        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.dmg"
 
-script:
-  - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static -DBRANCH_NAME=$TRAVIS_BRANCH -DBEAM_NO_QT_UI_WALLET=On -DBEAM_USE_GPU=On . && make equihash_test -j4;
+    - os: osx
+      osx_image: xcode9.3
+      before_install:
+        - export TZ=Etc/GMT-3
+        - brew unlink cmake
+        - brew unlink boost 
+        - brew install cmake boost
+        - sudo git clone --depth=1 https://github.com/nesbox/qt5-static-mac.git /usr/local/qt5-static
+        - export PATH=~/qt5-static/bin:$PATH
+        - export OPENSSL_ROOT_DIR="/usr/local/opt/openssl"
+        - export QT5_ROOT_DIR="/usr/local/qt5-static"
+        - export QML_IMPORT_PATH="/usr/local/qt5-static/qml"
+        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Darwin.dmg"
+        - export BEAM_WALLET_UI_OUT_VERLESS="Beam-Wallet.dmg"
+      env: 
+        - BUILD_TYPE=Release
+        - OS_FOLDER=mac
+      script:
+        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
+        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.dmg"
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+            - libboost-all-dev
+            - libssl-dev
+            - curl
+      before_install:
+        - export TZ=Etc/GMT-3
+        - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
+        - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
+        - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
+        - sudo apt-get update
+        - sudo apt-get install qt510declarative qt510svg libgl1-mesa-dev-lts-xenial
+        - eval "CC=gcc-7 && CXX=g++-7"
+        - export PATH=/opt/qt510/bin:$PATH
+        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Linux.deb"
+        - export BEAM_WALLET_UI_OUT_VERLESS="Beam-Wallet.deb"
+      env: 
+        - BUILD_TYPE=Debug
+        - OS_FOLDER=linux
+      script:
+        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
+        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.deb"
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+            - libboost-all-dev
+            - libssl-dev
+            - curl
+            - libxi-dev
+            - libcups2-dev
+      before_install:
+        - export TZ=Etc/GMT-3
+        - wget "https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.sh"
+        - sudo sh cmake-3.12.0-Linux-x86_64.sh --skip-license --prefix=/usr
+        - eval "CC=gcc-7 && CXX=g++-7"
+        - git clone --depth=1 https://github.com/nesbox/qt5-static-linux.git /home/travis/qt5-static
+        - export QT5_ROOT_DIR="/home/travis/qt5-static"
+        - export QML_IMPORT_PATH="/home/travis/qt5-static/qml"
+        - export BEAM_WALLET_UI_IN="BeamWallet-0.0.1-Linux.deb"
+        - export BEAM_WALLET_UI_OUT_VERLESS="Beam-Wallet.deb"
+      env: 
+        - BUILD_TYPE=Release
+        - OS_FOLDER=linux
+      script:
+        - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DDEBUG_MESSAGES_IN_RELEASE_MODE=On -DBEAM_LINK_TYPE=Static  -DBRANCH_NAME=$TRAVIS_BRANCH . && make -j 4 && ctest --verbose && cpack;
+        - export BEAM_WALLET_UI_OUT="Beam-Wallet-$BEAM_VERSION.deb"
 
 # TODO: version detection should be in one place
 before_script:
@@ -34,8 +109,19 @@ before_script:
 after_success:
   # deploy using ftp server
   - BUILDS_SERVER_PATH=${BUILD_SERVER}/files/$TRAVIS_BRANCH/$(date +%Y.%m.%d)/$BUILD_TYPE/$OS_FOLDER
-  - tar -cvzf beam-node-gpu-$BEAM_VERSION.tar.gz --directory=$HOME/build/BeamMW/beam/beam beam-node beam-node.cfg
-  - curl --retry 3 --ftp-create-dirs -T beam-node-gpu-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
+  - tar -cvzf beam-node-$BEAM_VERSION.tar.gz --directory=$HOME/build/BeamMW/beam/beam beam-node beam-node.cfg
+  - tar -cvzf beam-wallet-cli-$BEAM_VERSION.tar.gz --directory=$HOME/build/BeamMW/beam/wallet beam-wallet beam-wallet.cfg
+
+  # create package for advanced users
+  - mkdir pack && mkdir pack/wallet && mkdir pack/node && mkdir pack/ui
+  - cp wallet/beam-wallet* pack/wallet && cp beam/beam-node* pack/node && cp "$BEAM_WALLET_UI_IN" pack/ui/$BEAM_WALLET_UI_OUT_VERLESS
+  - tar -cvzf beam-pack-$BEAM_VERSION.tar.gz --directory=$HOME/build/BeamMW/beam/pack wallet node ui
+
+  # upload binaries
+  - curl --retry 3 --ftp-create-dirs -T beam-node-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
+  - curl --retry 3 --ftp-create-dirs -T beam-wallet-cli-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/
+  - curl --retry 3 --ftp-create-dirs -T "$HOME/build/BeamMW/beam/$BEAM_WALLET_UI_IN" "$BUILDS_SERVER_PATH/$BEAM_WALLET_UI_OUT"
+  - curl --retry 3 --ftp-create-dirs -T beam-pack-$BEAM_VERSION.tar.gz $BUILDS_SERVER_PATH/pack/
 
 notifications:
   email:
