--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,9 +236,11 @@ if(BEAM_USE_STATIC)
     endif()
 else()
     if(ANDROID)
-        include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/include)
-        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR_ANDROID}/lib/libcrypto.a)
-        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR_ANDROID}/lib/libssl.a)
+        if(ANDROID_ABI STREQUAL "armeabi-v7a")
+            include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/armv7-shared/include)
+        elseif(ANDROID_ABI STREQUAL "x86")
+            include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/x86-shared/include)
+        endif()
     else()
         find_package(OpenSSL REQUIRED)
 
